--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Complete Pokedex</title>
+        <link rel="icon" href="https://apprecs.org/ios/images/app-icons/256/73/1061754227.jpg">
         <link rel="stylesheet" href="style.css">
     </head>
     
