minor footer changes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <br>
             
             <p id="id">Id: {{ id }}</p>
+            <p id="height">Height: {{ height }}</p>
             <p id="weight">Weight: {{ weight }}</p>
             <p id="types">Type(s): </p>
             <ul>
@@ -49,6 +50,6 @@
     <pb>
       
   <footer class="footer">
-    <p><a href="https://github.com/Mimikyu778/CreativeProject3">GitHub Link</a></p>
+    <p><a style="color: white" href="https://github.com/Mimikyu778/CreativeProject3">GitHub Link</a></p>
   </footer>
 </html>
